# camellia

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
sqllogictest/: arithmetic.test  basic.test  expr.test  harness.rs  insert.test  order_by.test  sqllogictest.rs  where.test
src/: engine.rs  expression.rs  lib.rs  main.rs  schema.rs  table.rs  temp_storage.rs  trace.rs  types.rs
src/ops/: empty.rs  eval.rs  filter.rs  fullscan.rs  mod.rs  order_by.rs  projection.rs  sort.rs  values.rs
src/query/: mod.rs  parser.rs
