[package]
name = "camellia"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
comfy-table = "7.1.0"
dotenvy = "0.15.7"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
rustyline = "13.0.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlparser = { version = "0.40.0", features = ["serde"] }
# tracing & deps
minitrace = { version = "0.6.3", features = ["enable"] }
minitrace-opentelemetry = "0.6.3"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = "0.21.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
futures = "0.3.30"
rusqlite = { version = "0.30.0", features = ["bundled"] }
sqllogictest = "0.19.0"

[[test]]
name = "sqllogictest"
path = "sqllogictest/sqllogictest.rs"
harness = false
